[package]
name = "beast"
version = "1.0.0-alpha.0"
description = "A build tool for the Beast high level assembly language"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]

[dependencies]
pest = "1.0.6"
pest_derive = "1.0.7"
serde = "1.0.39"
serde_derive = "1.0.39"
melon = "0.10.0"
toml = "0.4.6"
failure = "0.1.1"
flate2 = "1.0.1"
rmp-serde = "0.13.7"
structopt = "0.2.7"
