[package]
name = "beast"
version = "1.0.0-alpha.0"
description = "A build tool for the Beast high level assembly language"
authors = ["Julian Laubstein <contact@julianlaubstein.de>"]
license = "MIT"
repository = "https://github.com/bakervm/beast"

[dependencies]
pest = "1"
pest_derive = "1"
serde = "1"
serde_derive = "1"
melon = "^0.11"
toml = "0.4.6"
failure = "0.1.1"
flate2 = "1"
rmp-serde = "0.13.7"
structopt = "^0.2"
